# c-lua

./: README.md
linux/c-lua/: CMakeCache.txt  CMakeLists.txt  Makefile  c-call-lua.lua  cmake_install.cmake  lua-call-so.lua  main  main.cpp
linux/c-lua/c-so/: luadll.cpp  luadll.h  makefile
linux/lua-cmake/: CMakeCache.txt  CMakeLists.txt
windows/: lua-5.4.2.lib
windows/c-lua/: c-lua.cpp  c-lua.sln  c-lua.vcxproj  c-lua.vcxproj.filters  lua-call-c.lua  lua-call-dll.lua
windows/mLualib/: luadll.cpp  luadll.h  mLualib.sln  mLualib.vcxproj  mLualib.vcxproj.filters
